--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,8 +43,12 @@ dependencies {
 
     implementation 'com.google.firebase:firebase-auth-ktx'
 
+
     // Also declare the dependency for the Google Play services library and specify its version
     implementation 'com.google.android.gms:play-services-auth:19.0.0'
+
+    implementation "androidx.cardview:cardview:1.0.0"
+
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.2.0'
