--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.NewsApplication">
+        android:theme="@style/Theme.NewsApplication"
+        android:name="androidx.multidex.MultiDexApplication">
         <activity
             android:name=".HomePageActivity"
             android:label="@string/title_activity_home_page"
