--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,11 @@ android {
 }
 
 dependencies {
+
+    // kotlin coroutine
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.7'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.7'
+
     // Import the BoM for the Firebase platform
     implementation platform('com.google.firebase:firebase-bom:26.2.0')
 
